# Tutorial_game

./: .gitignore
Tutorial_game/: CmakeLists.txt  README.md
Tutorial_game/assets/levels/: five.lvl
Tutorial_game/assets/shaders/: effects.frag  particle.frag  particle.vert  sprite.frag
Tutorial_game/src/: CMakeLists.txt  audio.cpp  audio.h  audio_manager.cpp  audio_manager.h  ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  main.cpp  particle_generator.cpp  particle_generator.h  post_processor.cpp  power_up.h  resource_manager.cpp  resource_manager.h  shader.cpp  sound.cpp  sound.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h
